# FS_11071_mod_bfcp

./: .gitignore
src/: switch_core_media.c  switch_ivr_bridge.c
src/include/: switch_types.h
src/mod/applications/mod_bfcp/: Makefile.am  bfcp_interface.c  bfcp_interface.h  bfcp_media.c  bfcp_thread.h  mod_bfcp.c  mod_bfcp.h
